2014-09-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* emacs-lisp/eldoc.el (eldoc-highlight-function-argument): Handle the
	case where we're currently providing part of the &rest arg after some
	&key args, as in define-ibuffer-op (bug#18048).

2014-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/which-func.el (which-func-ff-hook): Obey pre-existing
	buffer-local setting of which-func-mode.
	(which-func-mode): Use defvar-local.
	(which-function-mode): Don't reset which-func-mode in each buffer since
	it might have been set by someone else.
	(which-func-update-ediff-windows): Check which-function-mode.

2014-09-03  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (frame-initialize): Remove horizontal-scroll-bars
	from frame-initial-frame-alist.
	* scroll-bar.el (previous-horizontal-scroll-bar-mode)
	(horizontal-scroll-bar-mode-explicit)
	(set-horizontal-scroll-bar-mode, get-horizontal-scroll-bar-mode)
	(toggle-horizontal-scroll-bar): Remove.
	(horizontal-scroll-bar-mode): Remove defcustom.
	(horizontal-scroll-bar-mode): Fix doc-string.
	(scroll-bar-toolkit-scroll)
	(scroll-bar-toolkit-horizontal-scroll): Add doc-strings stubs.

2014-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-generate-description-file):
	Properly quote the arguments (bug#18332).  Change second arg.
	(package--alist-to-plist-args): Rename from package--alist-to-plist and
	quote the elements.
	(package--make-autoloads-and-stuff): Fix the test for pre-existence of
	the *-pkg.el file.  Adjust to new calling convention of
	package-generate-description-file.

	* progmodes/gud.el (gud-gdb-completion-at-point): Add hack (bug#18282).
	(gud-gdb-completions): Remove obsolete workaround.

2014-09-03  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (posn-col-row): Revert the change from commit
	r99634.2.576 eliz@gnu.org-20101113210758-8ml5kibjtza5ysmb, which
	was inadvertently merged from emacs-23 release branch in r102428